Implemented command to view profile.

--- a/web/jsp/main.jspx
+++ b/web/jsp/main.jspx
@@ -20,6 +20,9 @@
             <c:out value="">Hello, ${name}</c:out>
             <br/>
             <a href="Controller">Return to login</a>
+            <a href="Controller">
+                View profile
+            </a>
             
         </body>
     </html>
