--- a/web/jsp/profile-upd.jspx
+++ b/web/jsp/profile-upd.jspx
@@ -16,7 +16,7 @@
         </head>
         <body>
             <h1>Profile</h1>
-            <form method="POST">
+            <form action="Controller" method="POST">
                 <table>
                     <tr>
                         <td>Name:</td>
