--- a/FreelanceIt-war/web/templates/menu.xhtml
+++ b/FreelanceIt-war/web/templates/menu.xhtml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
+
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
-    <body>
-        <div>
-            <h:form>
-                <p:menubar>
-                    <p:menuitem value="Main" url="main.xhtml"/>
-                    <p:submenu label="My profile">
-                        <p:menuitem value="View profile" action="#{currentUserController.viewMyProfile()}"/>
-                        <p:menuitem value="Change profile" action="#{currentUserController.viewChangeProfile()}"/>
-                    </p:submenu>
-                    <p:submenu label="My tasks">
-                        <p:menuitem value="Create task" action="#{currentUserController.viewCreateTask()}"/>
-                    </p:submenu>
-                </p:menubar>
-            </h:form>
-        </div>
-    </body>
-</html>
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui">
+    <div>
+        <h:form>
+            <p:menubar>
+                <p:menuitem value="Main" url="main.xhtml"/>
+                <p:submenu label="My profile">
+                    <p:menuitem value="View profile" action="#{currentUserController.viewMyProfile()}"/>
+                    <p:menuitem value="Change profile" action="#{currentUserController.viewChangeProfile()}"/>
+                </p:submenu>
+                <p:submenu label="My tasks">
+                    <p:menuitem value="Create task" action="#{currentUserController.viewCreateTask()}"/>
+                    <p:menuitem value="My Tasks" action="#{currentUserController.viewMyTasks()}"/>
+                </p:submenu>
+                <p:menuitem value="Log out" action="#{currentUserController.logout()}"/>
+            </p:menubar>
+        </h:form>
+    </div>
+</ui:composition>
