--- a/FreelanceIt-war/web/templates/main.xhtml
+++ b/FreelanceIt-war/web/templates/main.xhtml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
+
 <!DOCTYPE html>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
@@ -10,7 +7,7 @@ and open the template in the editor.
                 xmlns:p="http://primefaces.org/ui">
 
     <div>
-        <p:spinner/>
+        <p:outputLabel value="Something interesting"/>
     </div>
 
 </ui:composition>
